# workflow-app

./: .dockerignore  .env.docker.example  .env.example  .env.production  .gitignore  BACKEND-BUILD-REPORT.md  CONTRIBUTING.md  DB-MIGRATION-REPORT.md  Dockerfile  Makefile  NOTICE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/commands/: test-autoflow-auto.md  (+1 more)
.github/: PULL_REQUEST_TEMPLATE.md
ai-forge/: android-testing-task.md  py-review-report.md
alembic/: env.py
android/: .gitignore  gradle.properties  keystore.properties.template  settings.gradle.kts
docs/: AUDIT-COVERAGE.md  AUDIT-DEPENDENCIES.md  AUDIT-INVENTORY.md  CODEX-SLASH-COMMAND-EXECUTOR.md  DCP-MATRIX-CANONICAL-CHECKLIST.md  DCP-MATRIX-CANONICAL-TASKLIST.md  RELEASE-READINESS-REPORT.md
infra/: README.md
scripts/: check-no-xfail-strict.sh  check-seeds-no-todos.py  check-terminal-locator-qualifier.sh  daily-loop-autocast.sh  notify-terminal-idle.py  run-mutation-tests.sh  run_mutation_tests.py  seed.py  smoke-driver.py  smoke-preflight.sh  smoke-shot.sh  smoke_rocksmash_button.py  validate-integration-log.py  wf-notify.sh
tests/: ANDROID_E2E.md  ANDROID_PERFORMANCE.md  ANDROID_RESILIENCE.md  CONTRACT.md  README.md  _helpers.py  conftest.py  test_add_command_dialog.py  test_app_state.py  test_autocast.py  test_autocast_failure_abort.py  test_autocast_runtime.py  test_brainstorm_mcp_grade.py  test_brainstorm_md_picker.py  test_brainstorm_radio_selector.py  test_brainstorm_tab_loading.py  test_build_module_pipeline_matrix_contract.py  test_codex_whitelist.py  test_command_item_widget.py  test_command_queue_drag_drop.py  test_command_queue_recovery.py  test_command_queue_widget.py  test_command_state_machine.py  test_config_bar.py  test_config_parser.py  test_daily_loop_autocast.sh  test_daily_loop_loader.py  test_db.py  test_db_manager.py  test_dcp_build_pipeline_handler.py  test_dcp_canonical_bare_snapshot.py  test_dcp_fail_closed_bare_name.py  test_dcp_flow_validation.py  test_dcp_matrix_canonical.py  test_dcp_matrix_trail.py  test_dcp_per_task_real_filenames.py  test_dcp_pipeline_auto_load.py  test_dcp_pipeline_e2e_task_manager.py  test_dcp_specific_flow_handler.py  test_delivery_reader.py  (+101 more)
ui/: gantt_chart.py  milestone_tracker.py  module_dashboard.py
(+281 files in other folders)
