[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-app"
version = "0.1.0"
description = "Workflow App — Claude Code pipeline orchestrator"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "SQLAlchemy>=2.0.0",
    "python-statemachine>=2.0.0",
    "pyte>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
]

[project.scripts]
workflow-app = "workflow_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.default.scripts]
db-seed = "python3 scripts/seed.py"
db-reset = "python3 scripts/seed.py --reset"
